Uploaded and linked resume

--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Patrick Smith's GitHub.io page</h1>
-<p>This is where you'll find my various projects.</p>
-<p>Pre-Work 1: Resume (will be linked)</p>
+<h1>Patrick Smith</h1>
+<p><a href="https://smipaga.github.io/resume/resume.html">My resume</a></p>
 </body>
 </html>
